@@ -73,6 +73,10 @@ CVS code -
 	- Make sure that the current position in the history list is
 	  properly set to the bottom if we cancel out of the prompt.
 	  New function history_reset(); changes to nanogetstr(). (DLR)
+- chars.c:
+  mbstrchr()
+	- Don't count matches between valid and invalid multibyte
+	  sequences anymore, for consistency. (DLR)
 - files.c:
   open_file()
 	- Assert that filename isn't NULL, and don't do anything special
